SplCompiler/spl.output
State 64 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: IDENTIFIER COLON block ENDP IDENTIFIER PERIOD

    2 block: DECLARATIONS declaration_block CODE statement_list
    3      | CODE statement_list

    4 declaration_block: declaration
    5                  | declaration_block declaration

    6 declaration: identifier_list OF TYPE type SEMI_COLON

    7 identifier_list: IDENTIFIER
    8                | identifier_list COMMA IDENTIFIER

    9 type: TYPE_CHARACTER
   10     | TYPE_INTEGER
   11     | TYPE_REAL

   12 statement_list: statement
   13               | statement_list SEMI_COLON statement

   14 statement: assignment_statement
   15          | write_statement
   16          | read_statement
   17          | if_statement
   18          | if_else_statement
   19          | for_statement
   20          | while_statement
   21          | do_statement

   22 assignment_statement: expression ASSIGNMENT_OPERATOR IDENTIFIER

   23 value: OPEN_BRACKET expression CLOSE_BRACKET
   24      | IDENTIFIER
   25      | constant

   26 expression: expression SUBTRACT_OPERATOR term
   27           | expression ADD_OPERATOR term
   28           | term

   29 term: term MULTIPULCATION_OPERATOR value
   30     | term DIVISION_OPERATOR value
   31     | value

   32 constant: REAL
   33         | UNSIGNED_INTEGER
   34         | SIGNED_INTEGER
   35         | CHARACTER_CONSTANT

   36 write_statement: WRITE OPEN_BRACKET output_list CLOSE_BRACKET
   37                | NEWLINE

   38 output_list: value
   39            | output_list COMMA value

   40 comparator: EQUALITY_OPERATOR
   41           | NOT_EQUAL_TO_OPERATOR
   42           | LESS_THAN_OPERATOR
   43           | MORE_THAN_OPERATOR
   44           | LESS_EQUAL_TO_OPERATOR
   45           | MORE_EQUAL_TO_OPERATOR

   46 read_statement: READ OPEN_BRACKET IDENTIFIER CLOSE_BRACKET

   47 if_statement: IF conditional THEN statement_list ENDIF

   48 if_else_statement: IF conditional THEN statement_list ELSE statement_list ENDIF

   49 conditional: comparison
   50            | conditional AND comparison
   51            | conditional OR comparison
   52            | NOT conditional

   53 comparison: expression comparator expression

   54 for_statement: FOR IDENTIFIER IS expression BY expression TO expression DO statement_list ENDFOR

   55 while_statement: WHILE conditional DO statement_list ENDWHILE

   56 do_statement: DO statement_list WHILE conditional ENDDO


Terminals, with rules where they appear

$end (0) 0
error (256)
ENDP (258) 1
DECLARATIONS (259) 2
CODE (260) 2 3
TYPE_CHARACTER (261) 9
TYPE_INTEGER (262) 10
TYPE_REAL (263) 11
IF (264) 47 48
ELSE (265) 48
NOT (266) 52
OF (267) 6
TYPE (268) 6
THEN (269) 47 48
ENDIF (270) 47 48
AND (271) 50
OR (272) 51
DO (273) 54 55 56
WHILE (274) 55 56
ENDDO (275) 56
ENDWHILE (276) 55
FOR (277) 54
IS (278) 54
BY (279) 54
TO (280) 54
ENDFOR (281) 54
NEWLINE (282) 37
WRITE (283) 36
READ (284) 46
ASSIGNMENT_OPERATOR (285) 22
EQUALITY_OPERATOR (286) 40
NOT_EQUAL_TO_OPERATOR (287) 41
LESS_THAN_OPERATOR (288) 42
MORE_THAN_OPERATOR (289) 43
LESS_EQUAL_TO_OPERATOR (290) 44
MORE_EQUAL_TO_OPERATOR (291) 45
OPEN_BRACKET (292) 23 36 46
CLOSE_BRACKET (293) 23 36 46
COMMA (294) 8 39
COLON (295) 1
SEMI_COLON (296) 6 13
PERIOD (297) 1
ADD_OPERATOR (298) 27
SUBTRACT_OPERATOR (299) 26
DIVISION_OPERATOR (300) 30
MULTIPULCATION_OPERATOR (301) 29
CHARACTER_CONSTANT (302) 35
UNSIGNED_INTEGER (303) 33
SIGNED_INTEGER (304) 34
REAL (305) 32
IDENTIFIER (306) 1 7 8 22 24 46 54


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
block (54)
    on left: 2 3, on right: 1
declaration_block (55)
    on left: 4 5, on right: 2 5
declaration (56)
    on left: 6, on right: 4 5
identifier_list (57)
    on left: 7 8, on right: 6 8
type (58)
    on left: 9 10 11, on right: 6
statement_list (59)
    on left: 12 13, on right: 2 3 13 47 48 54 55 56
statement (60)
    on left: 14 15 16 17 18 19 20 21, on right: 12 13
assignment_statement (61)
    on left: 22, on right: 14
value (62)
    on left: 23 24 25, on right: 29 30 31 38 39
expression (63)
    on left: 26 27 28, on right: 22 23 26 27 53 54
term (64)
    on left: 29 30 31, on right: 26 27 28 29 30
constant (65)
    on left: 32 33 34 35, on right: 25
write_statement (66)
    on left: 36 37, on right: 15
output_list (67)
    on left: 38 39, on right: 36 39
comparator (68)
    on left: 40 41 42 43 44 45, on right: 53
read_statement (69)
    on left: 46, on right: 16
if_statement (70)
    on left: 47, on right: 17
if_else_statement (71)
    on left: 48, on right: 18
conditional (72)
    on left: 49 50 51 52, on right: 47 48 50 51 52 55 56
comparison (73)
    on left: 53, on right: 49 50 51
for_statement (74)
    on left: 54, on right: 19
while_statement (75)
    on left: 55, on right: 20
do_statement (76)
    on left: 56, on right: 21


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1

    program  go to state 2


State 1

    1 program: IDENTIFIER . COLON block ENDP IDENTIFIER PERIOD

    COLON  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: IDENTIFIER COLON . block ENDP IDENTIFIER PERIOD

    DECLARATIONS  shift, and go to state 5
    CODE          shift, and go to state 6

    block  go to state 7


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 block: DECLARATIONS . declaration_block CODE statement_list

    IDENTIFIER  shift, and go to state 8

    declaration_block  go to state 9
    declaration        go to state 10
    identifier_list    go to state 11


State 6

    3 block: CODE . statement_list

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement_list        go to state 25
    statement             go to state 26
    assignment_statement  go to state 27
    value                 go to state 28
    expression            go to state 29
    term                  go to state 30
    constant              go to state 31
    write_statement       go to state 32
    read_statement        go to state 33
    if_statement          go to state 34
    if_else_statement     go to state 35
    for_statement         go to state 36
    while_statement       go to state 37
    do_statement          go to state 38


State 7

    1 program: IDENTIFIER COLON block . ENDP IDENTIFIER PERIOD

    ENDP  shift, and go to state 39


State 8

    7 identifier_list: IDENTIFIER .

    $default  reduce using rule 7 (identifier_list)


State 9

    2 block: DECLARATIONS declaration_block . CODE statement_list
    5 declaration_block: declaration_block . declaration

    CODE        shift, and go to state 40
    IDENTIFIER  shift, and go to state 8

    declaration      go to state 41
    identifier_list  go to state 11


State 10

    4 declaration_block: declaration .

    $default  reduce using rule 4 (declaration_block)


State 11

    6 declaration: identifier_list . OF TYPE type SEMI_COLON
    8 identifier_list: identifier_list . COMMA IDENTIFIER

    OF     shift, and go to state 42
    COMMA  shift, and go to state 43


State 12

   47 if_statement: IF . conditional THEN statement_list ENDIF
   48 if_else_statement: IF . conditional THEN statement_list ELSE statement_list ENDIF

    NOT                 shift, and go to state 44
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 28
    expression   go to state 45
    term         go to state 30
    constant     go to state 31
    conditional  go to state 46
    comparison   go to state 47


State 13

   56 do_statement: DO . statement_list WHILE conditional ENDDO

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement_list        go to state 48
    statement             go to state 26
    assignment_statement  go to state 27
    value                 go to state 28
    expression            go to state 29
    term                  go to state 30
    constant              go to state 31
    write_statement       go to state 32
    read_statement        go to state 33
    if_statement          go to state 34
    if_else_statement     go to state 35
    for_statement         go to state 36
    while_statement       go to state 37
    do_statement          go to state 38


State 14

   55 while_statement: WHILE . conditional DO statement_list ENDWHILE

    NOT                 shift, and go to state 44
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 28
    expression   go to state 45
    term         go to state 30
    constant     go to state 31
    conditional  go to state 49
    comparison   go to state 47


State 15

   54 for_statement: FOR . IDENTIFIER IS expression BY expression TO expression DO statement_list ENDFOR

    IDENTIFIER  shift, and go to state 50


State 16

   37 write_statement: NEWLINE .

    $default  reduce using rule 37 (write_statement)


State 17

   36 write_statement: WRITE . OPEN_BRACKET output_list CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 51


State 18

   46 read_statement: READ . OPEN_BRACKET IDENTIFIER CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 52


State 19

   23 value: OPEN_BRACKET . expression CLOSE_BRACKET

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 28
    expression  go to state 53
    term        go to state 30
    constant    go to state 31


State 20

   35 constant: CHARACTER_CONSTANT .

    $default  reduce using rule 35 (constant)


State 21

   33 constant: UNSIGNED_INTEGER .

    $default  reduce using rule 33 (constant)


State 22

   34 constant: SIGNED_INTEGER .

    $default  reduce using rule 34 (constant)


State 23

   32 constant: REAL .

    $default  reduce using rule 32 (constant)


State 24

   24 value: IDENTIFIER .

    $default  reduce using rule 24 (value)


State 25

    3 block: CODE statement_list .
   13 statement_list: statement_list . SEMI_COLON statement

    SEMI_COLON  shift, and go to state 54

    $default  reduce using rule 3 (block)


State 26

   12 statement_list: statement .

    $default  reduce using rule 12 (statement_list)


State 27

   14 statement: assignment_statement .

    $default  reduce using rule 14 (statement)


State 28

   31 term: value .

    $default  reduce using rule 31 (term)


State 29

   22 assignment_statement: expression . ASSIGNMENT_OPERATOR IDENTIFIER
   26 expression: expression . SUBTRACT_OPERATOR term
   27           | expression . ADD_OPERATOR term

    ASSIGNMENT_OPERATOR  shift, and go to state 55
    ADD_OPERATOR         shift, and go to state 56
    SUBTRACT_OPERATOR    shift, and go to state 57


State 30

   28 expression: term .
   29 term: term . MULTIPULCATION_OPERATOR value
   30     | term . DIVISION_OPERATOR value

    DIVISION_OPERATOR        shift, and go to state 58
    MULTIPULCATION_OPERATOR  shift, and go to state 59

    $default  reduce using rule 28 (expression)


State 31

   25 value: constant .

    $default  reduce using rule 25 (value)


State 32

   15 statement: write_statement .

    $default  reduce using rule 15 (statement)


State 33

   16 statement: read_statement .

    $default  reduce using rule 16 (statement)


State 34

   17 statement: if_statement .

    $default  reduce using rule 17 (statement)


State 35

   18 statement: if_else_statement .

    $default  reduce using rule 18 (statement)


State 36

   19 statement: for_statement .

    $default  reduce using rule 19 (statement)


State 37

   20 statement: while_statement .

    $default  reduce using rule 20 (statement)


State 38

   21 statement: do_statement .

    $default  reduce using rule 21 (statement)


State 39

    1 program: IDENTIFIER COLON block ENDP . IDENTIFIER PERIOD

    IDENTIFIER  shift, and go to state 60


State 40

    2 block: DECLARATIONS declaration_block CODE . statement_list

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement_list        go to state 61
    statement             go to state 26
    assignment_statement  go to state 27
    value                 go to state 28
    expression            go to state 29
    term                  go to state 30
    constant              go to state 31
    write_statement       go to state 32
    read_statement        go to state 33
    if_statement          go to state 34
    if_else_statement     go to state 35
    for_statement         go to state 36
    while_statement       go to state 37
    do_statement          go to state 38


State 41

    5 declaration_block: declaration_block declaration .

    $default  reduce using rule 5 (declaration_block)


State 42

    6 declaration: identifier_list OF . TYPE type SEMI_COLON

    TYPE  shift, and go to state 62


State 43

    8 identifier_list: identifier_list COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 63


State 44

   52 conditional: NOT . conditional

    NOT                 shift, and go to state 44
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 28
    expression   go to state 45
    term         go to state 30
    constant     go to state 31
    conditional  go to state 64
    comparison   go to state 47


State 45

   26 expression: expression . SUBTRACT_OPERATOR term
   27           | expression . ADD_OPERATOR term
   53 comparison: expression . comparator expression

    EQUALITY_OPERATOR       shift, and go to state 65
    NOT_EQUAL_TO_OPERATOR   shift, and go to state 66
    LESS_THAN_OPERATOR      shift, and go to state 67
    MORE_THAN_OPERATOR      shift, and go to state 68
    LESS_EQUAL_TO_OPERATOR  shift, and go to state 69
    MORE_EQUAL_TO_OPERATOR  shift, and go to state 70
    ADD_OPERATOR            shift, and go to state 56
    SUBTRACT_OPERATOR       shift, and go to state 57

    comparator  go to state 71


State 46

   47 if_statement: IF conditional . THEN statement_list ENDIF
   48 if_else_statement: IF conditional . THEN statement_list ELSE statement_list ENDIF
   50 conditional: conditional . AND comparison
   51            | conditional . OR comparison

    THEN  shift, and go to state 72
    AND   shift, and go to state 73
    OR    shift, and go to state 74


State 47

   49 conditional: comparison .

    $default  reduce using rule 49 (conditional)


State 48

   13 statement_list: statement_list . SEMI_COLON statement
   56 do_statement: DO statement_list . WHILE conditional ENDDO

    WHILE       shift, and go to state 75
    SEMI_COLON  shift, and go to state 54


State 49

   50 conditional: conditional . AND comparison
   51            | conditional . OR comparison
   55 while_statement: WHILE conditional . DO statement_list ENDWHILE

    AND  shift, and go to state 73
    OR   shift, and go to state 74
    DO   shift, and go to state 76


State 50

   54 for_statement: FOR IDENTIFIER . IS expression BY expression TO expression DO statement_list ENDFOR

    IS  shift, and go to state 77


State 51

   36 write_statement: WRITE OPEN_BRACKET . output_list CLOSE_BRACKET

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 78
    constant     go to state 31
    output_list  go to state 79


State 52

   46 read_statement: READ OPEN_BRACKET . IDENTIFIER CLOSE_BRACKET

    IDENTIFIER  shift, and go to state 80


State 53

   23 value: OPEN_BRACKET expression . CLOSE_BRACKET
   26 expression: expression . SUBTRACT_OPERATOR term
   27           | expression . ADD_OPERATOR term

    CLOSE_BRACKET      shift, and go to state 81
    ADD_OPERATOR       shift, and go to state 56
    SUBTRACT_OPERATOR  shift, and go to state 57


State 54

   13 statement_list: statement_list SEMI_COLON . statement

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement             go to state 82
    assignment_statement  go to state 27
    value                 go to state 28
    expression            go to state 29
    term                  go to state 30
    constant              go to state 31
    write_statement       go to state 32
    read_statement        go to state 33
    if_statement          go to state 34
    if_else_statement     go to state 35
    for_statement         go to state 36
    while_statement       go to state 37
    do_statement          go to state 38


State 55

   22 assignment_statement: expression ASSIGNMENT_OPERATOR . IDENTIFIER

    IDENTIFIER  shift, and go to state 83


State 56

   27 expression: expression ADD_OPERATOR . term

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 28
    term      go to state 84
    constant  go to state 31


State 57

   26 expression: expression SUBTRACT_OPERATOR . term

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 28
    term      go to state 85
    constant  go to state 31


State 58

   30 term: term DIVISION_OPERATOR . value

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 86
    constant  go to state 31


State 59

   29 term: term MULTIPULCATION_OPERATOR . value

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 87
    constant  go to state 31


State 60

    1 program: IDENTIFIER COLON block ENDP IDENTIFIER . PERIOD

    PERIOD  shift, and go to state 88


State 61

    2 block: DECLARATIONS declaration_block CODE statement_list .
   13 statement_list: statement_list . SEMI_COLON statement

    SEMI_COLON  shift, and go to state 54

    $default  reduce using rule 2 (block)


State 62

    6 declaration: identifier_list OF TYPE . type SEMI_COLON

    TYPE_CHARACTER  shift, and go to state 89
    TYPE_INTEGER    shift, and go to state 90
    TYPE_REAL       shift, and go to state 91

    type  go to state 92


State 63

    8 identifier_list: identifier_list COMMA IDENTIFIER .

    $default  reduce using rule 8 (identifier_list)


State 64

   50 conditional: conditional . AND comparison
   51            | conditional . OR comparison
   52            | NOT conditional .

    AND  shift, and go to state 73
    OR   shift, and go to state 74

    AND       [reduce using rule 52 (conditional)]
    OR        [reduce using rule 52 (conditional)]
    $default  reduce using rule 52 (conditional)


State 65

   40 comparator: EQUALITY_OPERATOR .

    $default  reduce using rule 40 (comparator)


State 66

   41 comparator: NOT_EQUAL_TO_OPERATOR .

    $default  reduce using rule 41 (comparator)


State 67

   42 comparator: LESS_THAN_OPERATOR .

    $default  reduce using rule 42 (comparator)


State 68

   43 comparator: MORE_THAN_OPERATOR .

    $default  reduce using rule 43 (comparator)


State 69

   44 comparator: LESS_EQUAL_TO_OPERATOR .

    $default  reduce using rule 44 (comparator)


State 70

   45 comparator: MORE_EQUAL_TO_OPERATOR .

    $default  reduce using rule 45 (comparator)


State 71

   53 comparison: expression comparator . expression

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 28
    expression  go to state 93
    term        go to state 30
    constant    go to state 31


State 72

   47 if_statement: IF conditional THEN . statement_list ENDIF
   48 if_else_statement: IF conditional THEN . statement_list ELSE statement_list ENDIF

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement_list        go to state 94
    statement             go to state 26
    assignment_statement  go to state 27
    value                 go to state 28
    expression            go to state 29
    term                  go to state 30
    constant              go to state 31
    write_statement       go to state 32
    read_statement        go to state 33
    if_statement          go to state 34
    if_else_statement     go to state 35
    for_statement         go to state 36
    while_statement       go to state 37
    do_statement          go to state 38


State 73

   50 conditional: conditional AND . comparison

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 28
    expression  go to state 45
    term        go to state 30
    constant    go to state 31
    comparison  go to state 95


State 74

   51 conditional: conditional OR . comparison

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 28
    expression  go to state 45
    term        go to state 30
    constant    go to state 31
    comparison  go to state 96


State 75

   56 do_statement: DO statement_list WHILE . conditional ENDDO

    NOT                 shift, and go to state 44
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 28
    expression   go to state 45
    term         go to state 30
    constant     go to state 31
    conditional  go to state 97
    comparison   go to state 47


State 76

   55 while_statement: WHILE conditional DO . statement_list ENDWHILE

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement_list        go to state 98
    statement             go to state 26
    assignment_statement  go to state 27
    value                 go to state 28
    expression            go to state 29
    term                  go to state 30
    constant              go to state 31
    write_statement       go to state 32
    read_statement        go to state 33
    if_statement          go to state 34
    if_else_statement     go to state 35
    for_statement         go to state 36
    while_statement       go to state 37
    do_statement          go to state 38


State 77

   54 for_statement: FOR IDENTIFIER IS . expression BY expression TO expression DO statement_list ENDFOR

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 28
    expression  go to state 99
    term        go to state 30
    constant    go to state 31


State 78

   38 output_list: value .

    $default  reduce using rule 38 (output_list)


State 79

   36 write_statement: WRITE OPEN_BRACKET output_list . CLOSE_BRACKET
   39 output_list: output_list . COMMA value

    CLOSE_BRACKET  shift, and go to state 100
    COMMA          shift, and go to state 101


State 80

   46 read_statement: READ OPEN_BRACKET IDENTIFIER . CLOSE_BRACKET

    CLOSE_BRACKET  shift, and go to state 102


State 81

   23 value: OPEN_BRACKET expression CLOSE_BRACKET .

    $default  reduce using rule 23 (value)


State 82

   13 statement_list: statement_list SEMI_COLON statement .

    $default  reduce using rule 13 (statement_list)


State 83

   22 assignment_statement: expression ASSIGNMENT_OPERATOR IDENTIFIER .

    $default  reduce using rule 22 (assignment_statement)


State 84

   27 expression: expression ADD_OPERATOR term .
   29 term: term . MULTIPULCATION_OPERATOR value
   30     | term . DIVISION_OPERATOR value

    DIVISION_OPERATOR        shift, and go to state 58
    MULTIPULCATION_OPERATOR  shift, and go to state 59

    $default  reduce using rule 27 (expression)


State 85

   26 expression: expression SUBTRACT_OPERATOR term .
   29 term: term . MULTIPULCATION_OPERATOR value
   30     | term . DIVISION_OPERATOR value

    DIVISION_OPERATOR        shift, and go to state 58
    MULTIPULCATION_OPERATOR  shift, and go to state 59

    $default  reduce using rule 26 (expression)


State 86

   30 term: term DIVISION_OPERATOR value .

    $default  reduce using rule 30 (term)


State 87

   29 term: term MULTIPULCATION_OPERATOR value .

    $default  reduce using rule 29 (term)


State 88

    1 program: IDENTIFIER COLON block ENDP IDENTIFIER PERIOD .

    $default  reduce using rule 1 (program)


State 89

    9 type: TYPE_CHARACTER .

    $default  reduce using rule 9 (type)


State 90

   10 type: TYPE_INTEGER .

    $default  reduce using rule 10 (type)


State 91

   11 type: TYPE_REAL .

    $default  reduce using rule 11 (type)


State 92

    6 declaration: identifier_list OF TYPE type . SEMI_COLON

    SEMI_COLON  shift, and go to state 103


State 93

   26 expression: expression . SUBTRACT_OPERATOR term
   27           | expression . ADD_OPERATOR term
   53 comparison: expression comparator expression .

    ADD_OPERATOR       shift, and go to state 56
    SUBTRACT_OPERATOR  shift, and go to state 57

    $default  reduce using rule 53 (comparison)


State 94

   13 statement_list: statement_list . SEMI_COLON statement
   47 if_statement: IF conditional THEN statement_list . ENDIF
   48 if_else_statement: IF conditional THEN statement_list . ELSE statement_list ENDIF

    ELSE        shift, and go to state 104
    ENDIF       shift, and go to state 105
    SEMI_COLON  shift, and go to state 54


State 95

   50 conditional: conditional AND comparison .

    $default  reduce using rule 50 (conditional)


State 96

   51 conditional: conditional OR comparison .

    $default  reduce using rule 51 (conditional)


State 97

   50 conditional: conditional . AND comparison
   51            | conditional . OR comparison
   56 do_statement: DO statement_list WHILE conditional . ENDDO

    AND    shift, and go to state 73
    OR     shift, and go to state 74
    ENDDO  shift, and go to state 106


State 98

   13 statement_list: statement_list . SEMI_COLON statement
   55 while_statement: WHILE conditional DO statement_list . ENDWHILE

    ENDWHILE    shift, and go to state 107
    SEMI_COLON  shift, and go to state 54


State 99

   26 expression: expression . SUBTRACT_OPERATOR term
   27           | expression . ADD_OPERATOR term
   54 for_statement: FOR IDENTIFIER IS expression . BY expression TO expression DO statement_list ENDFOR

    BY                 shift, and go to state 108
    ADD_OPERATOR       shift, and go to state 56
    SUBTRACT_OPERATOR  shift, and go to state 57


State 100

   36 write_statement: WRITE OPEN_BRACKET output_list CLOSE_BRACKET .

    $default  reduce using rule 36 (write_statement)


State 101

   39 output_list: output_list COMMA . value

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 109
    constant  go to state 31


State 102

   46 read_statement: READ OPEN_BRACKET IDENTIFIER CLOSE_BRACKET .

    $default  reduce using rule 46 (read_statement)


State 103

    6 declaration: identifier_list OF TYPE type SEMI_COLON .

    $default  reduce using rule 6 (declaration)


State 104

   48 if_else_statement: IF conditional THEN statement_list ELSE . statement_list ENDIF

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement_list        go to state 110
    statement             go to state 26
    assignment_statement  go to state 27
    value                 go to state 28
    expression            go to state 29
    term                  go to state 30
    constant              go to state 31
    write_statement       go to state 32
    read_statement        go to state 33
    if_statement          go to state 34
    if_else_statement     go to state 35
    for_statement         go to state 36
    while_statement       go to state 37
    do_statement          go to state 38


State 105

   47 if_statement: IF conditional THEN statement_list ENDIF .

    $default  reduce using rule 47 (if_statement)


State 106

   56 do_statement: DO statement_list WHILE conditional ENDDO .

    $default  reduce using rule 56 (do_statement)


State 107

   55 while_statement: WHILE conditional DO statement_list ENDWHILE .

    $default  reduce using rule 55 (while_statement)


State 108

   54 for_statement: FOR IDENTIFIER IS expression BY . expression TO expression DO statement_list ENDFOR

    OPEN_BRACKET        shift, and go to state 19
    CHARACTER_CONSTANT  shift, and go to state 20
    UNSIGNED_INTEGER    shift, and go to state 21
    SIGNED_INTEGER      shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 28
    expression  go to state 111
    term        go to state 30
    constant    go to state 31


State 109

   39 output_list: output_list COMMA value .

    $default  reduce using rule 39 (output_list)


State 110

   13 statement_list: statement_list . SEMI_COLON statement
   48 if_else_statement: IF conditional THEN statement_list ELSE statement_list . ENDIF

    ENDIF       shift, and go to state 112
    SEMI_COLON  shift, and go to state 54


State 111
